# Lcode_Agent

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
assets/: lcode_project_structure.html
docker/: Dockerfile  docker-compose.yml
examples/: 01_chat.py  02_react_tools.py  03_rag.py  04_multi_agent.py  05_web_ui.py  06_plugins.py
lcode/: __init__.py  cli.py
lcode/agents/: base.py  chat_agent.py  rag_agent.py  react_agent.py
lcode/core/: __init__.py  config.py  events.py
lcode/llm/: base.py  openai_provider.py
lcode/mcp/: __init__.py  im_adapter.py  server.py
lcode/memory/: __init__.py  conversation.py
lcode/observability/: tracer.py
lcode/orchestration/: __init__.py  manager.py
lcode/plugins/: __init__.py  loader.py
lcode/rag/: loader.py  vector_store.py
lcode/tools/: builtin.py  registry.py
lcode/web/: __init__.py  app.py
tests/: test_level1.py  test_level2.py  test_level3.py  test_level4.py  test_level5.py
