[project]
name = "lcode"
version = "0.1.0"
description = "LCode - A production-grade AI Agent Framework in Python"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "LCode Team", email = "lcode@example.com"}
]
keywords = ["ai", "agent", "llm", "framework", "rag", "multi-agent", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openai>=1.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.12.0",
    "rich>=13.0",
    "jinja2>=3.1.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=2.7.0",
    "structlog>=24.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "watchdog>=4.0",
    "aiofiles>=23.0",
    "tenacity>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "mkdocs>=1.6",
    "mkdocs-material>=9.0",
]
server = [
    "gunicorn>=22.0",
    "redis>=5.0",
]
all = [
    "lcode[dev,server]",
]

[project.scripts]
lcode = "lcode.cli:main"

[project.urls]
Homepage = "https://github.com/example/lcode"
Documentation = "https://lcode.readthedocs.io"
Repository = "https://github.com/example/lcode"
Issues = "https://github.com/example/lcode/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lcode"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
